@@ -33,7 +33,7 @@ try {
  if (isset($_GET['server'])) {
   $urlParts = parse_url($_SERVER['REQUEST_URI']);
   $filePath = G_ROOTPATH.'www/'.str_replace(G_SERVERNAME, '', G_PROTOCOL.'://'.$_SERVER['HTTP_HOST'].$urlParts['path']);
-  $file = new EfrontFile($filePath);
+  $file = new EfrontFile(urldecode($filePath));
  } else {
      $file = new EfrontFile($_GET['file']);
  }
